# GEODESIC-M

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  memory.md
.claude/: lastsession
.github/workflows/: ci.yml
docs/: SAD.md
docs/adr/: 0001-gpu-target-windows-linux-only.md  0002-gpu-backend-is-f32.md  0003-gpu-nonbonded-gather-csr-list.md  0004-geodesic-gpu-depends-on-engine.md  0005-hybrid-backend-is-gpu-alias.md  0006-drop-gpu-constraint-convergence-reduce.md  README.md
docs/superpowers/plans/: 2026-07-14-gpu-backend.md  2026-07-14-v0.6-hybrid-backend.md
docs/superpowers/specs/: 2026-07-14-gpu-backend-design.md  2026-07-14-v0.6-hybrid-backend-design.md
geodesic/: Cargo.toml
geodesic-core/: Cargo.toml
geodesic-core/src/: atoms.rs  backend.rs  buffers.rs  error.rs  lib.rs  params.rs  state.rs  topology.rs
geodesic-engine/: Cargo.toml
geodesic-engine/src/: constraint.rs  cpu_backend.rs  integrator.rs  lib.rs  neighbor.rs
geodesic-engine/src/force/: bonded.rs  mod.rs  nonbonded.rs
geodesic-engine/tests/: bonded_gradient.rs  constraint_solver.rs  cpu_backend.rs  energy_conservation.rs  fixture_gradient_check.rs  hydrogen_constraint_promotion.rs  integrator.rs  neighbor_list.rs  newton_third_law.rs  nonbonded_gradient.rs
geodesic-gpu/: Cargo.toml
geodesic-gpu/src/: device.rs  gpu_backend.rs  kernel.rs  lib.rs  neighbor_csr.rs  nonbonded.wgsl
geodesic-gpu/tests/: device.rs  forces_gpu_vs_cpu.rs  gpu_determinism.rs  neighbor_csr.rs
geodesic-gpu/tests/common/: mod.rs
geodesic-io/: Cargo.toml
geodesic-io/src/: config.rs  dcd.rs  export.rs  fixed_width.rs  inpcrd.rs  lib.rs  pdb.rs  prmtop.rs
geodesic-io/tests/: dcd_roundtrip.rs  export_roundtrip.rs  inpcrd_roundtrip.rs  pdb_roundtrip.rs  prmtop_roundtrip.rs
geodesic/benches/: benchmarks.rs
geodesic/src/: lib.rs  main.rs
geodesic/tests/: determinism.rs  golden_reference.rs  gpu_hybrid_alias.rs  gpu_run.rs  gpu_trajectory.rs
geodesic/tests/golden/: ala_dipeptide_ref.dcd
(+7 files in other folders)
