[workspace]
members = [
    "geodesic-core",
    "geodesic-io",
    "geodesic-engine",
    "geodesic-gpu",
    "geodesic",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
geodesic-core   = { path = "geodesic-core" }
geodesic-io     = { path = "geodesic-io" }
geodesic-engine = { path = "geodesic-engine" }
geodesic-gpu    = { path = "geodesic-gpu" }

# GPU backend (feature `gpu`, M2)
wgpu     = "22"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"

# Parallelism
rayon = "1"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = { version = "0.8", features = ["parse"] }

# Error handling
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
