[package]
name = "geodesic"
version = "0.1.0"
edition = "2021"

[dependencies]
geodesic-core = { workspace = true }
geodesic-io = { workspace = true }
geodesic-engine = { workspace = true }
geodesic-gpu = { workspace = true, optional = true }
clap = { workspace = true }

[features]
gpu = ["dep:geodesic-gpu"]

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benchmarks"
harness = false
